# doxysphinx-with-read-the-docs-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindDoxysphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  build_process.rst  conf.py  index.rst  local_doc.rst  readthedocs_setup.rst  requirements.txt
lib/: CMakeLists.txt
lib/include/: animal.h  cat.h  dog.h
lib/src/: cat.cpp  dog.cpp
